--- a/src/app/admin/components/nav/nav.component.html
+++ b/src/app/admin/components/nav/nav.component.html
@@ -1,35 +1,26 @@
 <mat-sidenav-container class="sidenav-container">
-  <mat-sidenav
-    #drawer
-    class="sidenav"
-    fixedInViewport
-    [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-    [mode]="(isHandset$ | async) ? 'over' : 'side'"
-    [opened]="(isHandset$ | async) === false"
-  >
+  <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+    [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item routerLink="/admin">
-        <mat-icon>bubble_chart</mat-icon> Dashboard</a
-      >
-      <a mat-list-item routerLink="/admin/products"><mat-icon>store</mat-icon> Productos</a>
+        <mat-icon>bubble_chart</mat-icon> Dashboard</a>
+      <a mat-list-item routerLink="/admin/products">
+        <mat-icon>store</mat-icon> Productos</a>
       <a mat-list-item routerLink="/admin/categories">
         <mat-icon>category</mat-icon> Categoría</a>
+      <a mat-list-item routerLink="/admin/basic">
+        <mat-icon>domain</mat-icon> Formulario Basico</a>
       <button mat-list-item (click)="logout()"> <mat-icon>login</mat-icon> Cerrar</button>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar color="primary">
-      <button
-        type="button"
-        aria-label="Toggle sidenav"
-        mat-icon-button
-        (click)="drawer.toggle()"
-        *ngIf="isHandset$ | async"
-      >
+      <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()"
+        *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>platzi-store</span>
+      <span>SERALSE DASHBOARD</span>
     </mat-toolbar>
     <!-- Add Content Here -->
     <router-outlet></router-outlet>
